--- a/boot-data/pom.xml
+++ b/boot-data/pom.xml
@@ -14,11 +14,23 @@
     <modules>
         <module>data-mybatis</module>
         <module>data-redis</module>
+        <module>data-jdbc</module>
     </modules>
 
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-    </properties>
-
+    <dependencies>
+        <!--自定义配置druid数据源-->
+<!--
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.1.8</version>
+        </dependency>
+-->
+        <!--自动配置druid数据源-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>1.1.17</version>
+        </dependency>
+    </dependencies>
 </project>
