--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>boot-newsdk</module>
         <module>boot-cache</module>
         <module>boot-mq</module>
+        <module>boot-email</module>
     </modules>
     <modelVersion>4.0.0</modelVersion>
 
