--- a/boot-security/pom.xml
+++ b/boot-security/pom.xml
@@ -12,6 +12,8 @@
     <packaging>pom</packaging>
     <modules>
         <module>spring-security</module>
+        <module>security-shiro</module>
+        <module>shiro-web</module>
     </modules>
 
     <dependencyManagement>
