--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>boot-webmvc</module>
         <module>boot-webflux</module>
         <module>boot-security</module>
+        <module>boot-dubbo</module>
     </modules>
     <modelVersion>4.0.0</modelVersion>
 
