--- a/boot-webmvc/pom.xml
+++ b/boot-webmvc/pom.xml
@@ -9,4 +9,14 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>boot-webmvc</artifactId>
+
+    <build>
+        <plugins>
+            <!--构建spring-boot的jar-->
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
