--- a/boot-data/pom.xml
+++ b/boot-data/pom.xml
@@ -15,6 +15,7 @@
         <module>data-mybatis</module>
         <module>data-redis</module>
         <module>data-jdbc</module>
+        <module>data-mybatis-plus</module>
     </modules>
 
     <dependencies>
