--- a/pom.xml
+++ b/pom.xml
@@ -22,10 +22,10 @@
         <module>boot-cache</module>
         <module>boot-mq</module>
         <module>boot-email</module>
-        <module>boot-webmvc</module>
-        <module>boot-webflux</module>
         <module>boot-security</module>
         <module>boot-dubbo</module>
+        <module>boot-test</module>
+        <module>boot-web</module>
     </modules>
     <modelVersion>4.0.0</modelVersion>
 
