--- a/boot-security/security-shiro/shiro-web/pom.xml
+++ b/boot-security/security-shiro/shiro-web/pom.xml
@@ -9,6 +9,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>shiro-web</artifactId>
+    <packaging>jar</packaging>
+
     <dependencies>
         <!--shiro-web启动器-->
         <dependency>
