--- a/boot-security/security-shiro/pom.xml
+++ b/boot-security/security-shiro/pom.xml
@@ -9,4 +9,5 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>security-shiro</artifactId>
+    <packaging>pom</packaging>
 </project>
