--- a/boot-security/security-shiro/shiro-core/pom.xml
+++ b/boot-security/security-shiro/shiro-core/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>shiro-core</artifactId>
-
+    <packaging>jar</packaging>
     <dependencies>
         <dependency>
             <groupId>org.apache.shiro</groupId>
