--- a/boot-data/data-mybatis-plus/pom.xml
+++ b/boot-data/data-mybatis-plus/pom.xml
@@ -9,4 +9,27 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>data-mybatis-plus</artifactId>
+
+    <dependencies>
+
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>3.5.1</version>
+        </dependency>
+
+        <!--数据库连接池-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.1.16</version>
+        </dependency>
+
+        <!--mysql驱动-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+
+    </dependencies>
 </project>
