--- a/boot-data/pom.xml
+++ b/boot-data/pom.xml
@@ -17,22 +17,6 @@
         <module>data-jdbc</module>
         <module>data-mybatis-plus</module>
         <module>data-mybatis-plus-dynamic</module>
+        <module>data-jpa</module>
     </modules>
-
-    <dependencies>
-        <!--自定义配置druid数据源-->
-<!--
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid</artifactId>
-            <version>1.1.8</version>
-        </dependency>
--->
-        <!--自动配置druid数据源-->
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid-spring-boot-starter</artifactId>
-            <version>1.1.17</version>
-        </dependency>
-    </dependencies>
 </project>
