--- a/boot-web/pom.xml
+++ b/boot-web/pom.xml
@@ -16,4 +16,12 @@
         <module>boot-webmvc</module>
     </modules>
 
+    <dependencies>
+        <!--引入spring-aop依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
