--- a/boot-web/pom.xml
+++ b/boot-web/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>boot-webflux</module>
         <module>boot-webmvc</module>
+        <module>boot-websocket</module>
     </modules>
 
     <dependencies>
