--- a/boot-data/data-integration/data-mybatis/pom.xml
+++ b/boot-data/data-integration/data-mybatis/pom.xml
@@ -3,18 +3,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>spring-boot</artifactId>
+        <artifactId>data-integration</artifactId>
         <groupId>S1897.java.spring-boot</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>boot-data</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>data-redis</module>
-        <module>data-jdbc</module>
-        <module>data-jpa</module>
-        <module>data-integration</module>
-    </modules>
+    <artifactId>data-mybatis</artifactId>
+    <dependencies>
+        <!--mybatis自动适配 spring boot-->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.2.2</version >
+        </dependency>
+    </dependencies>
 </project>
