--- a/boot-data/data-integration/pom.xml
+++ b/boot-data/data-integration/pom.xml
@@ -8,13 +8,11 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>data-mybatis</artifactId>
-    <dependencies>
-        <!--mybatis自动适配 spring boot-->
-        <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>2.2.2</version >
-        </dependency>
-    </dependencies>
+    <artifactId>data-integration</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>data-mybatis-plus</module>
+        <module>data-mybatis-plus-dynamic</module>
+        <module>data-mybatis</module>
+    </modules>
 </project>
