--- a/boot-data/pom.xml
+++ b/boot-data/pom.xml
@@ -16,5 +16,6 @@
         <module>data-jdbc</module>
         <module>data-jpa</module>
         <module>data-integration</module>
+        <module>data-elasticsearch</module>
     </modules>
 </project>
