--- a/boot-web/boot-webmvc/pom.xml
+++ b/boot-web/boot-webmvc/pom.xml
@@ -10,6 +10,15 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>boot-webmvc</artifactId>
 
+
+    <dependencies>
+        <dependency>
+            <groupId>S1897.java.spring-boot</groupId>
+            <artifactId>boot-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <!--构建spring-boot的jar-->
