--- a/boot-web/pom.xml
+++ b/boot-web/pom.xml
@@ -15,6 +15,7 @@
         <module>boot-webflux</module>
         <module>boot-webmvc</module>
         <module>boot-websocket</module>
+        <module>boot-common</module>
     </modules>
 
     <dependencies>
@@ -23,6 +24,19 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
+
+        <!--spring-swagger-->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+
     </dependencies>
 
 </project>
