--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>boot-test</module>
         <module>boot-web</module>
         <module>boot-aop</module>
+        <module>boot-swagger</module>
     </modules>
     <modelVersion>4.0.0</modelVersion>
 
