--- a/boot-web/boot-webmvc/pom.xml
+++ b/boot-web/boot-webmvc/pom.xml
@@ -12,11 +12,20 @@
 
 
     <dependencies>
+
         <dependency>
             <groupId>S1897.java.spring-boot</groupId>
             <artifactId>boot-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <!--覆盖仲裁的日志依赖：当前boot1.x版本仲裁依赖版本过低，不适用其他依赖项:例如poi依赖-->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.17.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
