--- a/boot-newsdk/boot-newsdk-2x/pom.xml
+++ b/boot-newsdk/boot-newsdk-2x/pom.xml
@@ -10,6 +10,20 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>boot-newsdk-2x</artifactId>
 
+    <dependencies>
+        <!--redis依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <!--redis-redis默认使用lettuce，不会自动引入连接池依赖-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+    </dependencies>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
