--- a/boot-mq/mq-kafka/pom.xml
+++ b/boot-mq/mq-kafka/pom.xml
@@ -2,17 +2,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>spring-boot</artifactId>
         <groupId>S1897.java.spring-boot</groupId>
+        <artifactId>boot-mq</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <modules>
-        <module>mq-kafka</module>
-        <module>mq-rabbit</module>
-    </modules>
-    <modelVersion>4.0.0</modelVersion>
-    <artifactId>boot-mq</artifactId>
-    <packaging>pom</packaging>
+
+    <artifactId>mq-kafka</artifactId>
+
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
