-优化redis模型 -加入mongodb集成模型&快速入门

--- a/boot-data/pom.xml
+++ b/boot-data/pom.xml
@@ -17,5 +17,6 @@
         <module>data-jpa</module>
         <module>data-integration</module>
         <module>data-elasticsearch</module>
+        <module>data-mongodb</module>
     </modules>
 </project>
