--- a/boot-security/security-shiro/pom.xml
+++ b/boot-security/security-shiro/pom.xml
@@ -10,4 +10,8 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>security-shiro</artifactId>
     <packaging>pom</packaging>
+    <modules>
+        <module>shiro-core</module>
+        <module>shiro-web</module>
+    </modules>
 </project>
