--- a/boot-data/pom.xml
+++ b/boot-data/pom.xml
@@ -19,4 +19,13 @@
         <module>data-elasticsearch</module>
         <module>data-mongodb</module>
     </modules>
+    <dependencies>
+        <!--引入spring-aop依赖-->
+        <dependency>
+            <groupId>S1897.java.spring-boot</groupId>
+            <artifactId>boot-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+    </dependencies>
 </project>
