--- a/boot-web/boot-websocket/pom.xml
+++ b/boot-web/boot-websocket/pom.xml
@@ -24,5 +24,11 @@
             <artifactId>spring-messaging</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>S1897.java.spring-boot</groupId>
+            <artifactId>boot-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 </project>
